# self_nowcoder

./: .gitignore  CMakeLists.txt  main.cpp
include/: ExtremumGetter.h  InfoH.h  PosAdder.h  PosSetter.h  TreePrinter.h  VisualTree.h  bst.h  environment.h  function.hpp  selfFun.h
src/: 0001_find_num_in_two_dims_array.cpp  0002_replaceSpace.cpp
src/forJob/: 0_main.cpp
src/forOffer/: 0000_main.cpp  0002_replaceSpace.cpp  0003_print_list_from_start_to_finish.cpp  0004_rebuild_binary_tree.cpp  0005_achieve_queue_by_two_stacks.cpp  0006_rotate_the_smallest_number_of_an_array.cpp  0007_fibonacci_sequence.cpp  0008_jump_steps.cpp  0009_super_jump_steps.cpp  0010_rect_cover.cpp  0011_oneNumber_in_binary.cpp  0012_Integer_power.cpp  0013_adjust_array_order_so_that_odd_nums_precede_even_nums.cpp  0014_K-th_node_from_the _list.cpp  0015_reverse_listNode.cpp  0016_merge_two_sorted_listNodes.cpp  0017_subStructure_of_tree.cpp  0018_mirror_binaryTree.cpp  0019_print_matrix_clockwise.cpp  0020_Stack_contain_min_function.cpp  0021_stack_push_sequence.cpp  0022_print_binary_tree_from_above.cpp  0023_Post-order_traversal_sequence of_binary_search_tree.cpp  0024_Binary_tree_neutralization_to_a_certain_value_path.cpp  0025__complex_list_copy.cpp  0026_convert_binary_search_tree_to__bidirectional_list.cpp  0027_string_permutation.cpp  0028_number_that_appears_more_than_half_of_the_array.cpp  0029_smallest_number_of_k_in_the_array.cpp  0030_maximum_sum_of_consecutive_subarrays.cpp  0031_the_number_of_occurrences_of_1_in_the_integer.cpp  0032_arrange_the_array_to_the_smallest_number.cpp  (+27 more)
(+9 files in other folders)
